Fix scroll start offset. Add hide animation using transform rules. Header jumps a little when scrolling up too quickly, appearing as a momentary flash. See issue for more info.

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -145,9 +145,9 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
   }
   &--slide-up {
-    background-color: red;
+    transform: translateY(-100%);
   }
   &--slide-down {
-    background-color: blue;
+    transform: translateY(0);
   }
 }
